syntax="proto3";
package file;
option go_package="file";
service FileSrv{
  rpc UploadFile(FileReq)returns(FileResp){}
}
message FileReq{
  string name=1;//上传文件名称
  string path=2;//路径
  int64 size=3;//大小
  string  file_explain=4;//描述
  int32 sort=5;//排序
  FileType file_type=6;//图片类型
  string file_suffix=7;//图片后缀
}
enum FileType{
  USERLOG=0;//用户头像
  SHOPLOG=1;//店铺头像
  PLATFORMIMG=2;//平台图片
  INDEXLBTIMG=3;//首页轮播图
  PRODUCTIMG=4;//商品图片
  OTHERIMG=5;//其他图片
}
message FileResp{
  int64 id=1;//唯一Id
}